using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace DomainLayer.Enums.UserEnum
{
    public enum Roles
    {
        VisaApplicant,
        VisaOfficer,
        SupportSpecialist,
        BranchManager,
        Admin
    }
}
